# vidutils

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  publish-test.yaml  publish.yaml  python-publish.yml  run-unit-tests.yml
examples/: process-video.ipynb  write-frames.ipynb
src/vidutils/: __init__.py  procs.py  video.py
tests/: settings.py  test_artifacts.py  test_engine.py  test_player.py  test_primitives.py  test_script.py  test_utils.py  test_video.py
vidutils/: __init__.py  artifacts.py  engine.py  player.py  primitives.py  procs.py  script.py  utils.py  video.py
