[tool.poetry]
name = "vidutils"
version = "0.0.0"
description = "Video processing tools for prototyping in Python."
authors = ["Riccardo Lincetto <37301469+RiccardoLincetto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
opencv-python-headless = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
commitizen = "^2.42.1"
ruff = "^0.0.261"
black = "^23.3.0"
ipykernel = "^6.22.0"

[tool.poetry.group.ci.dependencies]
liccheck = "^0.8.3"
mypy = "^1.2.0"
coverage = "^7.2.3"
pytest = "^7.3.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = ["pyproject.toml:version"]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["vidutils"]
branch = true
disable_warnings = [
    'no-data-collected',
    'no-module-imported',
]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    "apache",
    "apache 2.0",
    "apache software",
    "apache software license",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "isc license",
    "isc license (iscl)",
    "mit",
    "mit license",
    "python software foundation license",
    "zpl 2.1",
]
unauthorized_licenses = [
    "gpl v3",
]

[tool.pytest]
# Accepted frame shapes

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
