[metadata]
name = vidutils
version = attr: vidutils.__version__
author = Riccardo Lincetto
author_email = riccardo.lincetto@gmail.com
description = OpenCV-based video prototyping tools.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
license_files = LICENSE
url = https://github.com/RiccardoLincetto/vidutils
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = vidutils
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    opencv-python
    vidsz

[options.packages.find]
where = vidutils